remove datetime from nav, add datetime and links to footer, fixing inconsistent gap everywhere oops

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,3 +1,15 @@
 #footer {
-  background: url(../../assets/images/grain.svg), linear-gradient(to bottom, var(--light), var(--secondary));
+  background: url(../../assets/images/grain.svg), linear-gradient(to bottom, var(--light), var(--primary));
+}
+
+.footer-title {
+  color: transparent;
+  background: var(--dark);            /* shadow color */
+  font-family: 'Rubik', sans-serif;
+  font-size: 20vw;
+  font-weight: 500;
+  text-align: center;
+  line-height: 16vw;
+  text-shadow: 0 0 4px var(--light);  /* text color */
+  background-clip: text;
 }
