--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -8,7 +8,7 @@
   background: var(--dark);
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
   transition: box-shadow 0.2s linear;
 }
 
