--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -3,7 +3,6 @@
 }
 
 .project-link {
-  margin-top: 1rem;
   padding: 0.25rem 1rem;
   width: 160px;
   color: var(--light);
